<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/default_values_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/set_default_values_btn" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/factor_a_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:maxLength="1"
                    android:hint="@string/size_factor_a_hint"
                    android:gravity="center"
                    android:layout_margin="5dp"/>

                <EditText
                    android:id="@+id/factor_b_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:maxLength="1"
                    android:hint="@string/size_factor_b_hint"
                    android:gravity="center"
                    android:layout_margin="5dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <EditText
                android:id="@+id/factors_block_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="2"
                android:hint="@string/factors_block_size_hint"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/create_table_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_factors_table_btn" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:id="@+id/input_factors_table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </HorizontalScrollView>

            <Button
                android:id="@+id/do_dispersion_analysis_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:text="@string/do_dispersion_analysis_btn" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:id="@+id/result_table"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:visibility="gone">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView19"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView20"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border" />

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView"
                                style="@style/Border"/>
                        </TableRow>
                    </TableLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </HorizontalScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>